fixed clipping issue with font

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ h2
 {
     height: 120px;
     text-align: left;
+    padding-left: 10px;
 }
 
 .break p
